<resources>
    <string name="app_name">FAS</string>
    <string name="start_game">Start_game</string>
    <string name="about_game">About_game</string>
    <string name="exit_game">Exit_game</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="tag">tag</string>
    <string name="e_mail">e_mail</string>
    <string name="password">password</string>
    <string name="your_name">your_name</string>
    <string name="re_type_password">re_type_password</string>
    <string name="name">Your name</string>
    <string name="re_type">Re_type_password</string>
    <string name="login1">Login</string>
    <string name="welcome_to_fas">Welcome to FAS</string>
    <string name="What">Выберите, что Вы хотели бы посмотреть:</string>
    <string name="film">Фильм</string>
    <string name="serial">Сериал</string>
    <string name="choose_film_genre">Сhoose your preferred movie genre:</string>
    <string name="comedy">Comedy</string>
    <string name="horror">Horror</string>
    <string name="family">Family</string>
    <string name="melodrama">Melodrama</string>
    <string name="adventures">Adventures</string>
    <string name="action_movie">Action movie</string>
    <string name="exit">Exit</string>
    <string name="watch_the_trailer">Watch the trailer</string>
    <string name="Shurik">Операция \'Ы\' и другие приключения Шурика</string>
    <string name="film_rating_8_7_10">Film rating: 8,7/10</string>
    <string name="back">Back</string>
    <string name="film_rating_8_8_10">Film rating: 8,8/10</string>
    <string name="_1_1">1+1</string>
    <string name="kush">Большой куш</string>
    <string name="film_rating_8_6_10">Film rating: 8,6/10</string>
    <string name="film_rating_7_3_10">Film rating: 7,3/10</string>
    <string name="al">Один дома</string>
    <string name="film_rating_8_3_10">Film rating: 8,3/10</string>
    <string name="ivan">Иван Васильевич меняет профессию</string>
    <string name="stazer">Стажёр</string>
    <string name="film_rating_7_6_10">Film rating: 7,6/10</string>
    <string name="Pila">Пила</string>
    <string name="film_rating_7_8_10">Film rating: 7,8/10</string>
    <string name="щтщ">Оно</string>
    <string name="virus">Вирус</string>
    <string name="film_rating_5_1_10">Film rating: 5,1/10</string>
    <string name="lilu">Лилу и Бриггс</string>
    <string name="film_rating_7_4_10">Film rating: 7,4/10</string>
    <string name="charli">Чарли и шокладная фабрика</string>
    <string name="paddi">Приключения Паддингтона</string>
    <string name="film_rating_7_2_10">Film rating: 7,2/10</string>
    <string name="ancharted">Анчартед: на картах не значится</string>
    <string name="film_rating_6_8_10">Film rating: 6,8/10</string>
    <string name="juman">Джуманджи</string>
    <string name="brilik">Как украсть бриллиант</string>
    <string name="film_rating_5_8_10">Film rating: 5,8/10</string>
    <string name="forsaz">Форсаж</string>
    <string name="answer">Без ответа</string>
    <string name="film_rating_6_2_10">Film rating: 6,2/10</string>
    <string name="pula">Шальная пуля</string>
    <string name="film_rating_6_0_10">Film rating: 6,0/10</string>
    <string name="on">Он и она</string>
    <string name="posle">После</string>
    <string name="vek">Век Адалин</string>
    <string name="film_rating_7_7_10">Film rating: 7,7/10</string>
    <string name="russian">Russian</string>
    <string name="choose_your_preffered_serial_genre">Choose your preffered serial genre:</string>
    <string name="trudny">Трудные подростки</string>
    <string name="serial_rating_8_1_10">Serial rating: 8,1/10</string>
    <string name="zuki">Жуки</string>
    <string name="serial_rating_7_7_10">Serial rating: 7,7/10</string>
    <string name="kitchen">Кухня</string>
    <string name="serial_rating_8_2_10">Serial rating: 8,2/10</string>
    <string name="strange">Очень странные дела</string>
    <string name="serial_rating_7_4_10">Serial rating: 7,4/10</string>
    <string name="serial_rating_7_6_10">Serial rating: 7,6/10</string>
    <string name="izvne">Извне</string>
    <string name="shershni">Шершни</string>
    <string name="manuna">Манюня</string>
    <string name="serial_rating_7_1_10">Serial rating: 7,1/10</string>
    <string name="sato">Sato</string>
    <string name="Sato">Сато</string>
    <string name="serial_rating_6_7_10">Serial rating: 6,7/10</string>
    <string name="pirogova">ИП Пирогова</string>
    <string name="retype_password">Retype password</string>
    <string name="password1">Password</string>
    <string name="email">Email</string>
    <string name="what_do_you_want_to_see">What do you want to see?</string>
    <string name="film1">Film</string>
    <string name="serial1">Serial</string>
    <string name="user">user</string>
    <string name="add_to_favourites">Add to favourites</string>
    <string name="_100">100 вещей и ничего лишнего</string>
    <string name="time">Время</string>
    <string name="otmel">Отмель</string>
    <string name="film_rating_6_3_10">Film rating: 6,3/10</string>
    <string name="day">Счастливого дня смерти</string>
    <string name="film_rating_6_6_10">Film rating: 6,6/10</string>
    <string name="fam">Семья по-быстрому</string>
    <string name="film_rating_7_5_10">Film rating: 7,5/10</string>
    <string name="chenu">Чебурашка</string>
    <string name="fte">После свадьбы</string>
    <string name="_50">50 оттенков серого</string>
    <string name="film_rating_4_4_10">Film rating: 4,4/10</string>
    <string name="sun">Полночное солнце</string>
    <string name="film_rating_6_9_10">Film rating: 6,9/10</string>
    <string name="stars">Виноваты звезды</string>
    <string name="avatar">Аватар</string>
    <string name="inter">Интерстеллар</string>
    <string name="indiana">Индиана Джонс и колесо судьбы</string>
    <string name="film_rating_6_5_10">Film rating: 6,5/10</string>
    <string name="film_rating_8_0_10">Film rating: 8,0/10</string>
    <string name="film_rating_6_7_10">Film rating: 6,7/10</string>
    <string name="hankok">Хэнкок</string>
    <string name="bamblbi">Бамблби</string>
    <string name="luci">Люси</string>
    <string name="Soderzanki">Содержанки</string>
    <string name="ivanovi">Ивановы-ивановы</string>
    <string name="hotel">Отель Элеон</string>
    <string name="serial_rating_7_3_10">Serial_rating: 7,3/10</string>
    <string name="films">Films:</string>
    <string name="serials">Serials:</string>
    <string name="your_bookmarks">Your bookmarks:</string>
</resources>