<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:orientation="vertical"
    android:background="@color/material_dynamic_primary90">


    <TextView
        android:id="@+id/tv_title"
        android:layout_width="357dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/arima_madurai_extrabold"
        android:gravity="center"
        android:text="@string/what_do_you_want_to_see"
        android:textSize="24sp"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/film"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/scrollbarTrackVertical"
        android:backgroundTint="@color/material_dynamic_tertiary30"
        android:fontFamily="@font/arima_madurai_medium"
        android:text="@string/film1"
        android:onClick="onClick"/>

    <Button
        android:id="@+id/serial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/scrollbarTrackVertical"
        android:backgroundTint="@color/material_dynamic_tertiary30"
        android:fontFamily="@font/arima_madurai_medium"
        android:onClick="onClick"
        android:text="@string/serial1"
        tools:ignore="TextSizeCheck" />

    <ImageButton
        android:id="@+id/user"
        android:layout_width="60dp"
        android:layout_height="57dp"
        android:layout_marginStart="325dp"
        android:layout_marginTop="550dp"
        android:adjustViewBounds="true"
        android:background="@drawable/btn_custom"
        android:contentDescription="@string/user"
        android:maxWidth="100dp"
        android:maxHeight="100dp"
        android:onClick="onClick"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/user" />

</LinearLayout>